# zscanner

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
systemd/: zscanner.service
zscanner/: __main__.py  binance.py  chart.py  discord.py  runner.py  setup.py  zscore.py
